# mp4parse-rust

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  README.md  build.rs
.github/workflows/: audit.yml  build.yml  cifuzz.yml
capi/include/: mp4parse-rust.h
examples/: Makefile  afl-capi.rs  afl.rs  dump.cc  dump.rs  test.cc
include/: mp4parse.h
mp4parse/: Cargo.toml
mp4parse/benches/: avif_benchmark.rs
mp4parse/src/: boxes.rs  fallible.rs  lib.rs  tests.rs  unstable.rs
mp4parse/tests/: a1lx-new-lsel.avif  afl.rs  lsel-layer-id-ffff.avif  no-brands-alpha.avif  overflow.rs  public.rs
mp4parse/tests/corrupt/: lsel-bad-layer-id.avif
mp4parse_capi/: Cargo.toml  build.rs  cbindgen.toml
mp4parse_capi/examples/: Makefile  afl-capi.rs  afl.rs  dump.rs  test.cc
mp4parse_capi/fuzz/: Cargo.toml  mp4.dict
mp4parse_capi/fuzz/fuzz_targets/: avif.rs  fuzz_target_1.rs  mp4.rs
mp4parse_capi/src/: lib.rs
mp4parse_capi/tests/: build_ffi_test.rs  test_afconvert.rs  test_avis.rs  test_chunk_out_of_range.rs  test_colour_info.rs  test_encryption.rs  test_fragment.rs  test_rotation.rs  test_sample_table.rs  test_workaround_stsc.rs  test_xhe_aac.rs
src/: boxes.rs  capi.rs  lib.rs  tests.rs
test_ffi/: Cargo.toml  build.rs
test_ffi/include/: mp4parse.h
test_ffi/src/: main.rs  test.cc
tests/: afl.rs  public.rs
