[package]

name = "mp4parse"
version = "0.1.5"
authors = [
  "Ralph Giles <giles@mozilla.com>",
  "Matthew Gregan <kinetik@flim.org>",
]

description = "Parser for ISO base media file format (mp4)"
license = "MPL-2.0"

repository = "https://github.com/mozilla/mp4parse-rust"

# Cargo includes random files from the working directory
# by default! Avoid bloating the package with test files.
exclude = [
  "*.mp4",
]

[dependencies]
byteorder = "0.4.2"
