[package]
name = "mp4parse"
version = "0.2.1"
authors = [
  "Ralph Giles <giles@mozilla.com>",
  "Matthew Gregan <kinetik@flim.org>",
]

description = "Parser for ISO base media file format (mp4)"
license = "MPL-2.0"

repository = "https://github.com/mozilla/mp4parse-rust"

# Cargo includes random files from the working directory
# by default! Avoid bloating the package with test files.
exclude = [
  "*.mp4",
]

build = "build.rs"

[dependencies]
byteorder = "0.4.2"

[dev-dependencies]
test-assembler = "0.1.0"

[build-dependencies]
rusty-cheddar = { version = "0.3.0", optional = true }

[features]
cheddar = ["rusty-cheddar"]

