[package]
name = "mp4parse"
version = "0.8.0"
authors = [
  "Ralph Giles <giles@mozilla.com>",
  "Matthew Gregan <kinetik@flim.org>",
  "Alfredo Yang <ayang@mozilla.com>",
]

description = "Parser for ISO base media file format (mp4)"
documentation = "https://mp4parse-docs.surge.sh/mp4parse/"
license = "MPL-2.0"
categories = ["multimedia::video"]

repository = "https://github.com/mozilla/mp4parse-rust"

# Avoid complaints about trying to package test files.
exclude = [
  "*.mp4",
]

[badges]
travis-ci = { repository = "https://github.com/mozilla/mp4parse-rust" }

[dependencies]
byteorder = "1.0.0"
afl = { version = "0.1.1", optional = true }
afl-plugin = { version = "0.1.1", optional = true }
abort_on_panic = { version = "1.0.0", optional = true }
bitreader = { version = "0.3.0" }
num-traits = "0.1.37"

[dev-dependencies]
test-assembler = "0.1.2"

[features]
fuzz = ["afl", "afl-plugin", "abort_on_panic"]

# Somewhat heavy-handed, but we want at least -Z force-overflow-checks=on.
[profile.release]
debug-assertions = true
