[package]
name = "mp4parse_capi"
version = "0.8.0"
authors = [
  "Ralph Giles <giles@mozilla.com>",
  "Matthew Gregan <kinetik@flim.org>",
  "Alfredo Yang <ayang@mozilla.com>",
]

description = "Parser for ISO base media file format (mp4)"
documentation = "https://mp4parse-docs.surge.sh/mp4parse/"
license = "MPL-2.0"

repository = "https://github.com/mozilla/mp4parse-rust"

# Avoid complaints about trying to package test files.
exclude = [
  "*.mp4",
]

build = "build.rs"

[badges]
travis-ci = { repository = "https://github.com/mozilla/mp4parse-rust" }

[dependencies]
byteorder = "1.0.0"
mp4parse = {version = "0.8.0", path = "../mp4parse"}
num-traits = "0.1.37"

[build-dependencies]
moz-cheddar = "0.4.0"

[features]
fuzz = ["mp4parse/fuzz"]

