[package]
name = "mp4parse_capi"
version = "0.9.1"
authors = [
  "Ralph Giles <giles@mozilla.com>",
  "Matthew Gregan <kinetik@flim.org>",
  "Alfredo Yang <ayang@mozilla.com>",
]

description = "Parser for ISO base media file format (mp4)"
documentation = "https://docs.rs/mp4parse_capi/"
license = "MPL-2.0"

repository = "https://github.com/mozilla/mp4parse-rust"

# Avoid complaints about trying to package test files.
exclude = [
  "*.mp4",
]

[badges]
travis-ci = { repository = "https://github.com/mozilla/mp4parse-rust" }

[dependencies]
byteorder = "1.2.1"
env_logger = "0.5.3"
log = "0.4"

# To enable fallible memory allocation, add 'features = ["mp4parse_fallible"]'
# in mp4parse brace.
mp4parse = {version = "0.9.1", path = "../mp4parse"}
num-traits = "0.2.0"

[build-dependencies]
cbindgen = "0.4.3"

[features]
fuzz = ["mp4parse/fuzz"]

